2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/actions/edit-commands.c (edit_undo_clear_cmd_callback): tell
	the user how much memory will be freed by clearing the undo history.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimppainttool.[ch]
	* app/tools/gimptool.[ch]: unified tool and paint-tool statusbar APIs.

	* app/tools/gimpblendtool.c
	* app/tools/gimpclonetool.c
	* app/tools/gimpcolortool.c
	* app/tools/gimpcroptool.c
	* app/tools/gimpeditselectiontool.c
	* app/tools/gimpfuzzyselecttool.c
	* app/tools/gimpmeasuretool.c
	* app/tools/gimpmovetool.c
	* app/tools/gimpnewrectselecttool.c
	* app/tools/gimprectangletool.c
	* app/tools/gimprectselecttool.c
	* app/tools/gimpvectortool.c: changed accordingly.

	* app/tools/gimpselectiontool.c: give more hints in the statusbar.
	Some of the selection tools should probably override these.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimppreviewcache.c: minor code cleanup.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpselectionoptions.c: added modifier keys to the
	tooltips of the selection mode buttons.

	* app/dialogs/preferences-dialog.c: removed the GUI for the
	"default-threshold" preference.

	* app/tools/gimpmagnifyoptions.c: removed the GUI for the
	Threshold option; it was more confusing than useful.

	* app/config/gimpguiconfig.c: changed the default value for
	"save-tool-options" to FALSE. This is a major source of confusion;
	let's try if disabling it is an improvement.

2005-05-07  Jay Cox  <jaycox@gimp.org>

	* plug-ins/common/psd.c: add comments describing thumbnail resource.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icoload.c
	* plug-ins/winicon/main.c: added a thumbnail loader for .ico files
	Fixes bug #158191.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icoload.[ch]
	* plug-ins/winicon/main.c: code cleanup, prepare for thumbnail
	loading.

2005-05-06  Sven Neumann  <sven@gimp.org>

	* app/actions/layers-actions.c